--- a/packages/ddca/package.json
+++ b/packages/ddca/package.json
@@ -36,5 +36,8 @@
     "build": "tsc",
     "clean": "rm -R ./lib",
     "publish": "npm publish --access public"
+  },
+  "resolutions": {
+    "cross-fetch": "3.1.5"
   }
 }
