--- a/packages/money-streaming/tsconfig.json
+++ b/packages/money-streaming/tsconfig.json
@@ -1,22 +1,22 @@
 {
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
-        "target": "es6",
-        "module": "CommonJS",
-        "rootDir": "./src",
-        "outDir": "./lib",
-        "types": [],
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "baseUrl": "./src",
+        "declaration": true,
+        "esModuleInterop": true,
         "lib": [
             "ES6"
         ],
-        "declaration": true,
-        "useDefineForClassFields": true,
-        "baseUrl": "./src",
-        "allowJs": true,
+        "module": "CommonJS",
+        "outDir": "./lib",
+        "rootDir": "./src",
         "sourceMap": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true
+        "strict": true,
+        "target": "es6",
+        "types": [],
+        "useDefineForClassFields": true,
     },
     "$schema": "https://json.schemastore.org/tsconfig",
     "display": "Recommended",
