--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "description": "Typescript SDKs for the Money Streaming Protocol",
   "private": false,
   "repository": {
@@ -11,7 +11,7 @@
     "@kayahr/text-encoding": "^1.3.0",
     "@project-serum/anchor": "^0.18.2",
     "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.95.0",
+    "@solana/web3.js": "1.95.2",
     "bn.js": "^5.2.0",
     "borsh": "2.0.0",
     "bs58": "^6.0.0",
@@ -20,23 +20,23 @@
     "dotenv": "16.4.5",
     "moment": "^2.30",
     "prompt-sync": "^4.2.0",
-    "yaml": "^2.4.5"
+    "yaml": "^2.5"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.7",
     "@types/bn.js": "^5.1.0",
     "@types/bs58": "^4.0.1",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "eslint": "^8.57.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.1",
+    "@typescript-eslint/eslint-plugin": "^8.0",
+    "@typescript-eslint/parser": "^8.0",
+    "eslint": "^9.8",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
     "rimraf": "6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.5.4"
   },
   "keywords": [
     "mean-dao",
@@ -63,6 +63,11 @@
     "prettier-format": "prettier --config .prettierrc.json 'src/**/*.ts' --write"
   },
   "resolutions": {
-    "rimraf": "6.0.1"
-  }
+    "@solana/web3.js": "1.95.2",
+    "rimraf": "6.0.1",
+		"ws": "8.18.0"
+	},
+	"overrides": {
+		"ws": "8.18.0"
+	}
 }
