--- a/packages/msp/package.json
+++ b/packages/msp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/msp",
-  "version": "0.5.15",
+  "version": "0.5.16",
   "description": "MSP Typescript SDK",
   "private": false,
   "repository": {
@@ -10,15 +10,15 @@
   "dependencies": {
     "@project-serum/anchor": "^0.20.1",
     "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.31.0",
-    "bn.js": "^5.2.0",
+    "@solana/web3.js": "1.95.2",
+    "bn.js": "^5.2.1",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "@types/bn.js": "^5.1.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.4.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "keywords": [
     "mean-dao",
@@ -38,8 +38,15 @@
   "license": "ISC",
   "scripts": {
     "build": "tsc",
-    "clean": "rmdir /s lib",
+    "clean": "rm -rf lib",
     "publish": "npm publish --access public",
     "start": "ts-node main.ts"
-  }
+  },
+  "resolutions": {
+    "@solana/web3.js": "1.95.2",
+		"ws": "8.18.0"
+	},
+	"overrides": {
+		"ws": "8.18.0"
+	}
 }
