--- a/packages/staking/package.json
+++ b/packages/staking/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/staking",
-  "version": "0.1.24",
+  "version": "0.1.25",
   "description": "Typescript library to interact with the Mean Stake program",
   "private": false,
   "repository": {
@@ -22,12 +22,13 @@
   "dependencies": {
     "@project-serum/anchor": "^0.22.1",
     "@solana/spl-token": "^0.1.8",
-    "cross-fetch": "^3.1.5"
+    "@solana/web3.js": "1.95.2",
+    "cross-fetch": "^4.0.0"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.1",
+    "@tsconfig/recommended": "^1.0.7",
     "json-loader": "^0.5.7",
-    "typescript": "^4.4.2"
+    "typescript": "^5.5.4"
   },
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
@@ -39,5 +40,12 @@
     "build": "tsc",
     "clean": "rm -R ./lib",
     "publish": "npm publish --access public"
-  }
+  },
+  "resolutions": {
+		"@solana/web3.js": "1.95.2",
+		"ws": "8.18.0"
+	},
+	"overrides": {
+		"ws": "8.18.0"
+	}
 }
